tests/error/arg_prim_ref.gw
// [contains] primitive types cannot be used as reference
fun void test(int @i){}
